--- a/ArgEngine/ArgEngine.vcxproj
+++ b/ArgEngine/ArgEngine.vcxproj
@@ -68,6 +68,7 @@
       </ForcedIncludeFiles>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -88,22 +89,24 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;GLFW_INCLUDE_NONE;YAML_CPP_STATIC_DEFINE;ARG_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <DebugInformationFormat>None</DebugInformationFormat>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>arg_pch.hpp</PrecompiledHeaderFile>
       <ForcedIncludeFiles>
       </ForcedIncludeFiles>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
     </Link>
     <Lib>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;yaml-cpp.lib;zlibstatic.lib;assimp.lib;lua54.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -155,6 +158,7 @@
     <ClCompile Include="Source\Renderer\Camera\Camera.cpp" />
     <ClCompile Include="Source\Renderer\Camera\OrthoCamera.cpp" />
     <ClCompile Include="Source\Renderer\Camera\PerspectiveCamera.cpp" />
+    <ClCompile Include="Source\Renderer\CubeMap.cpp" />
     <ClCompile Include="Source\Renderer\FrameBuffer.cpp" />
     <ClCompile Include="Source\Renderer\Light\DirectionalLight.cpp" />
     <ClCompile Include="Source\Renderer\Light\PointLight.cpp" />
@@ -174,6 +178,7 @@
     <ClCompile Include="Source\Script\ScriptEngine.cpp" />
     <ClCompile Include="Source\Script\ScriptGlue\ScriptGlueCore.cpp" />
     <ClCompile Include="Source\Script\ScriptGlue\ScriptGlueGameplay.cpp" />
+    <ClInclude Include="Libraries\Include\sol\sol.hpp" />
     <ClInclude Include="Source\Content\Content.hpp" />
     <ClInclude Include="Source\Content\Import\ImporterDataConversion.hpp" />
     <ClInclude Include="Source\Content\Import\IResourceImporter.hpp" />
@@ -232,6 +237,7 @@
     <ClInclude Include="Source\Gameplay\World\Actor\Transform.hpp" />
     <ClInclude Include="Source\Gameplay\World\GameWorld.hpp" />
     <ClInclude Include="Source\Renderer\Animation\SkeletalAnimation.hpp" />
+    <ClInclude Include="Source\Renderer\CubeMap.hpp" />
     <ClInclude Include="Source\Renderer\RenderContext.hpp" />
     <ClInclude Include="Source\Renderer\RenderTarget.hpp" />
     <ClInclude Include="Source\Renderer\SkeletalMesh.hpp" />
