--- a/ArgEditor/ArgEditor.vcxproj
+++ b/ArgEditor/ArgEditor.vcxproj
@@ -13,7 +13,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b2f20101-3052-454b-908b-4f2d2105e5f0}</ProjectGuid>
+    <ProjectGuid>{e2da8cbb-ebc1-4620-829d-90961a8ad46f}</ProjectGuid>
     <RootNamespace>ArgEditor</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -43,34 +43,33 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(SolutionDir)Bin\Editor_$(Configuration)_$(Platform)\</OutDir>
-    <IntDir>$(SolutionDir)Temp\Editor\$(Configuration)_$(Platform)\</IntDir>
-    <IncludePath>$(ProjectDir)Source;$(ProjectDir)Libraries\Include;$(SolutionDir)ArgEngine\Source;$(SolutionDir)ArgEngine\Libraries\Include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)\Libraries\Lib;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)Bin\Editor_$(Configuration)_$(Platform)\</OutDir>
     <IntDir>$(SolutionDir)Temp\Editor\$(Configuration)_$(Platform)\</IntDir>
-    <IncludePath>$(ProjectDir)Source;$(ProjectDir)Libraries\Include;$(SolutionDir)ArgEngine\Source;$(SolutionDir)ArgEngine\Libraries\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)Source;$(ProjectDir)Libraries\Include;$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)\Libraries\Lib;$(LibraryPath)</LibraryPath>
+    <ExternalIncludePath>$(SolutionDir)ArgEngine\Source;$(SolutionDir)ArgEngine\Libraries\Include;$(ExternalIncludePath)</ExternalIncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>$(SolutionDir)Bin\Editor_$(Configuration)_$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)Temp\Editor\$(Configuration)_$(Platform)\</IntDir>
+    <IncludePath>$(ProjectDir)Source;$(ProjectDir)Libraries\Include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)\Libraries\Lib;$(LibraryPath)</LibraryPath>
+    <ExternalIncludePath>$(SolutionDir)ArgEngine\Source;$(SolutionDir)ArgEngine\Libraries\Include;$(ExternalIncludePath)</ExternalIncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;YAML_CPP_STATIC_DEFINE;ARG_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;GLFW_INCLUDE_NONE;YAML_CPP_STATIC_DEFINE;ARG_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
-      <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
+      <PrecompiledHeaderFile>arg_pch.hpp</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
-      <IgnoreAllDefaultLibraries>
-      </IgnoreAllDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -79,11 +78,13 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;YAML_CPP_STATIC_DEFINE;ARG_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;GLFW_INCLUDE_NONE;YAML_CPP_STATIC_DEFINE;ARG_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
-      <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
+      <PrecompiledHeaderFile>arg_pch.hpp</PrecompiledHeaderFile>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -93,11 +94,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ArgEngine\ArgEngine.vcxproj">
-      <Project>{bf671895-916b-4518-b2a6-543923439d70}</Project>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="Libraries\Include\imgui\imgui.cpp" />
     <ClCompile Include="Libraries\Include\imgui\imgui_demo.cpp" />
     <ClCompile Include="Libraries\Include\imgui\imgui_draw.cpp" />
@@ -105,10 +101,10 @@
     <ClCompile Include="Libraries\Include\imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="Libraries\Include\imgui\imgui_tables.cpp" />
     <ClCompile Include="Libraries\Include\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Source\Dialog\FileDialog\FileOpenDialog.cpp" />
     <ClCompile Include="Source\Dialog\MessageBox\MessageBoxDialog.cpp" />
     <ClCompile Include="Source\Editor.cpp" />
     <ClCompile Include="Source\EditorApplication.cpp" />
-    <ClCompile Include="Source\Dialog\FileDialog\FileOpenDialog.cpp" />
     <ClCompile Include="Source\EditorCamera.cpp" />
     <ClCompile Include="Source\GUI\EditorGUI.cpp" />
     <ClCompile Include="Source\GUI\EditorGUIPanel.cpp" />
@@ -130,10 +126,10 @@
     <ClInclude Include="Libraries\Include\imgui\imstb_rectpack.h" />
     <ClInclude Include="Libraries\Include\imgui\imstb_textedit.h" />
     <ClInclude Include="Libraries\Include\imgui\imstb_truetype.h" />
+    <ClInclude Include="Source\Dialog\FileDialog\FileOpenDialog.hpp" />
     <ClInclude Include="Source\Dialog\MessageBox\MessageBoxDialog.hpp" />
     <ClInclude Include="Source\Editor.hpp" />
     <ClInclude Include="Source\EditorApplication.hpp" />
-    <ClInclude Include="Source\Dialog\FileDialog\FileOpenDialog.hpp" />
     <ClInclude Include="Source\EditorCamera.hpp" />
     <ClInclude Include="Source\GUI\EditorGUI.hpp" />
     <ClInclude Include="Source\GUI\EditorGUIPanel.hpp" />
@@ -144,6 +140,11 @@
     <ClInclude Include="Source\GUI\Panels\WorldOutlinerPanel.hpp" />
     <ClInclude Include="Source\GUI\Panels\WorldSettingsPanel.hpp" />
     <ClInclude Include="Source\Project\Project.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ArgEngine\ArgEngine.vcxproj">
+      <Project>{bf671895-916b-4518-b2a6-543923439d70}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
