--- a/ArgEngine/ArgEngine.vcxproj
+++ b/ArgEngine/ArgEngine.vcxproj
@@ -146,10 +146,11 @@
     <ClCompile Include="Source\Gameplay\World\Actor\ActorHandle.cpp" />
     <ClCompile Include="Source\Gameplay\World\Actor\Component\ActorComponent.cpp" />
     <ClCompile Include="Source\Gameplay\World\Actor\Component\ComponentRegistry.cpp" />
-    <ClCompile Include="Source\Gameplay\World\Actor\Component\Components\PointLightComponent.cpp" />
-    <ClCompile Include="Source\Gameplay\World\Actor\Component\Components\SkeletalModelComponent.cpp" />
-    <ClCompile Include="Source\Gameplay\World\Actor\Component\Components\SpotLightComponent.cpp" />
-    <ClCompile Include="Source\Gameplay\World\Actor\Component\Components\StaticModelComponent.cpp" />
+    <ClCompile Include="Source\Gameplay\World\Actor\Component\Components\Graphics\CameraComponent.cpp" />
+    <ClCompile Include="Source\Gameplay\World\Actor\Component\Components\Graphics\PointLightComponent.cpp" />
+    <ClCompile Include="Source\Gameplay\World\Actor\Component\Components\Graphics\SkeletalModelComponent.cpp" />
+    <ClCompile Include="Source\Gameplay\World\Actor\Component\Components\Graphics\SpotLightComponent.cpp" />
+    <ClCompile Include="Source\Gameplay\World\Actor\Component\Components\Graphics\StaticModelComponent.cpp" />
     <ClCompile Include="Source\Gameplay\World\Actor\Transform.cpp" />
     <ClCompile Include="Source\Gameplay\World\GameWorld.cpp" />
     <ClCompile Include="Source\Renderer\Animation\SkeletalAnimation.cpp" />
@@ -230,10 +231,11 @@
     <ClInclude Include="Source\Gameplay\World\Actor\Component\ActorComponent.hpp" />
     <ClInclude Include="Source\Gameplay\World\Actor\Component\ActorComponentHandle.hpp" />
     <ClInclude Include="Source\Gameplay\World\Actor\Component\ComponentRegistry.hpp" />
-    <ClInclude Include="Source\Gameplay\World\Actor\Component\Components\PointLightComponent.hpp" />
-    <ClInclude Include="Source\Gameplay\World\Actor\Component\Components\SkeletalModelComponent.hpp" />
-    <ClInclude Include="Source\Gameplay\World\Actor\Component\Components\SpotLightComponent.hpp" />
-    <ClInclude Include="Source\Gameplay\World\Actor\Component\Components\StaticModelComponent.hpp" />
+    <ClInclude Include="Source\Gameplay\World\Actor\Component\Components\Graphics\CameraComponent.hpp" />
+    <ClInclude Include="Source\Gameplay\World\Actor\Component\Components\Graphics\PointLightComponent.hpp" />
+    <ClInclude Include="Source\Gameplay\World\Actor\Component\Components\Graphics\SkeletalModelComponent.hpp" />
+    <ClInclude Include="Source\Gameplay\World\Actor\Component\Components\Graphics\SpotLightComponent.hpp" />
+    <ClInclude Include="Source\Gameplay\World\Actor\Component\Components\Graphics\StaticModelComponent.hpp" />
     <ClInclude Include="Source\Gameplay\World\Actor\Transform.hpp" />
     <ClInclude Include="Source\Gameplay\World\GameWorld.hpp" />
     <ClInclude Include="Source\Renderer\Animation\SkeletalAnimation.hpp" />
@@ -282,6 +284,9 @@
     <ClInclude Include="Source\Debug\Log.hpp" />
     <ClInclude Include="Source\Core\Window\Window.hpp" />
     <ClInclude Include="Source\arg_pch.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Source\Gameplay\World\Actor\Component\Components\Physics\" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
