--- a/ArgEditor/UserConfig/GUI.ini
+++ b/ArgEditor/UserConfig/GUI.ini
@@ -21,8 +21,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Content Browser]
-Pos=0,981
-Size=2105,388
+Pos=0,692
+Size=1465,388
 Collapsed=0
 DockId=0x00000002,0
 
@@ -45,33 +45,39 @@ DockId=0x00000008,1
 
 [Window][World Outliner]
 Pos=0,74
-Size=473,905
+Size=473,616
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Details]
-Pos=2107,74
-Size=453,1295
+Pos=1467,74
+Size=453,1006
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Resource]
-Pos=2107,74
-Size=453,1295
+Pos=1467,74
+Size=453,1006
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Game View]
 Pos=475,74
-Size=1630,905
+Size=990,616
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][World Settings]
 Pos=0,74
-Size=473,905
+Size=473,616
 Collapsed=0
 DockId=0x00000007,1
+
+[Window][Project Settings]
+Pos=1467,74
+Size=453,1006
+Collapsed=0
+DockId=0x0000000A,2
 
 [Table][0xDF50FCAD,2]
 Column 0  Weight=0.3261
@@ -92,13 +98,13 @@ Column 0  Weight=0.4020
 Column 1  Weight=1.5980
 
 [Docking][Data]
-DockSpace           ID=0x2B7EA37D Window=0x995B0CF8 Pos=0,74 Size=2560,1295 Split=X
+DockSpace           ID=0x2B7EA37D Window=0x995B0CF8 Pos=0,74 Size=1920,1006 Split=X
   DockNode          ID=0x00000009 Parent=0x2B7EA37D SizeRef=2105,1061 Split=X
     DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=1493,1345 Split=Y
       DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=1920,955 Split=X
         DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=472,661 Selected=0x48EF358F
         DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1024,661 Split=X Selected=0x642CEEBB
-          DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=473,616 Selected=0x318D4478
+          DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=473,616 Selected=0xF1D9481C
           DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=1630,616 CentralNode=1 Selected=0x642CEEBB
       DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1920,388 Selected=0xBF096F38
     DockNode        ID=0x00000004 Parent=0x00000009 SizeRef=425,1345 Selected=0xE8C841D3
