--- a/ArgRuntime/ArgRuntime.vcxproj
+++ b/ArgRuntime/ArgRuntime.vcxproj
@@ -101,9 +101,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Runtime.cpp" />
     <ClCompile Include="Source\RuntimeApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Runtime.hpp" />
     <ClInclude Include="Source\RuntimeApplication.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
