--- a/ArgEditor/ArgEditor.vcxproj.filters
+++ b/ArgEditor/ArgEditor.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="Source\GUI\Panels\ProjectSettingsPanel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Libraries\Include\imgui\ImGuizmo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\EditorApplication.hpp">
@@ -153,6 +156,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\GUI\Panels\ProjectSettingsPanel.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Libraries\Include\imgui\ImGuizmo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Libraries\Include\imgui\ImGui.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
