Actor: Clone, extended API

--- a/ArgEditor/UserConfig/GUI.ini
+++ b/ArgEditor/UserConfig/GUI.ini
@@ -104,7 +104,7 @@ DockSpace           ID=0x2B7EA37D Window=0x995B0CF8 Pos=0,74 Size=1920,1006 Spli
       DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=1920,616 Split=X
         DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=472,661 Selected=0x48EF358F
         DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1024,661 Split=X Selected=0x642CEEBB
-          DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=419,616 Selected=0xF1D9481C
+          DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=419,616 Selected=0x318D4478
           DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=1044,616 CentralNode=1 Selected=0x642CEEBB
       DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1920,388 Selected=0xBF096F38
     DockNode        ID=0x00000004 Parent=0x00000009 SizeRef=425,1345 Selected=0xE8C841D3
